<resources>
    <string name="txt_liked">My featured media</string>
    <string name="toast_sorted_by_date">Sorted by date added</string>
    <string name="toast_sorted_by_title">Sorted by title</string>
    <string name="toast_agree_to_send_to_cloud">Click the button again if you agree to replace these favorite media in the cloud?</string>
    <string name="toast_agry_to_replace_from_cloud">Do you agree to replacing your favorite media list from the cloud? Click the button again if you agree</string>
    <string name="toast_sent_to_cloud">Data has been sent to the cloud</string>
    <string name="toast_empty_edit_text_value">Please enter your friend\'s email</string>
    <string name="btn_unfriend">Unfriend</string>
    <string name="friends_list_title">Friends</string>
    <string name="toast_user_log_out">User logged out successfully</string>
    <string name="button_log_out">button log out</string>
    <string name="button_search_friend">button search friend</string>
    <string name="friend_requests">friend requests</string>
    <string name="no_friends_message">You have no friends added yet</string>
    <string name="scroll_view_content_description">List of friends</string>
</resources>